# newrelic-airflow-plugin

./: .gitignore  CONTRIBUTING.rst  README.rst  THIRD_PARTY_NOTICES.rst  azure-pipelines.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docker/: Dockerfile  airflow.cfg  docker-compose.yaml
src/newrelic_airflow_plugin/: __init__.py  harvester.py  metric_batch.py  newrelic_plugin.py
tests/: test_config.py  test_harvest.py  test_metric_batch.py  test_plugin.py
tests/resources/: airflow.cfg
