[metadata]
name = newrelic-airflow-plugin
description = New Relic Plugin for Apache Airflow
long_description = file: README.rst
long_description_content_type = text/x-rst
author = New Relic
author_email = open-source@newrelic.com
platforms = any
license = Apache-2.0
license_files =
    LICENSE
    THIRD_PARTY_NOTICES.rst
classifiers =
    Development Status :: 3 - Alpha
    Topic :: System :: Monitoring
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
setup_requires =
    setuptools_scm
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
package_dir =
    =src
packages=find:

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[options.entry_points]
airflow.plugins =
    newrelic_plugin=newrelic_airflow_plugin.newrelic_plugin:NewRelicStatsPlugin

[tool:pytest]
addopts = --doctest-modules --strict -v --ignore=src/newrelic_airflow_plugin/newrelic_plugin.py
testpaths = src tests

[flake8]
max-line-length = 88
ignore = W503,E203

[coverage:run]
branch = True
source = newrelic_airflow_plugin
